--- a/conf/application.conf
+++ b/conf/application.conf
@@ -186,5 +186,21 @@ microservice {
       token = ABCD1234
       environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id"]
     }
+
+    api1651 {
+      host = 127.0.0.1
+      port = 9772
+      env = Prod
+      token = ABCD1234
+      environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id"]
+    }
+
+    release7 {
+      host = 127.0.0.1
+      port = 9772
+      env = Prod
+      token = ABCD1234
+      environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id"]
+    }
   }
 }
