--- a/conf/application.conf
+++ b/conf/application.conf
@@ -147,6 +147,10 @@ feature-switch {
   release-6 {
     enabled = true
   }
+
+  tys-api {
+    enabled = true
+  }
 }
 
 microservice {
@@ -186,6 +190,15 @@ microservice {
       token = ABCD1234
       environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id", "X-Request-Id"]
     }
+
+    tys-ifs {
+      host = 127.0.0.1
+      port = 9772
+      env = Prod
+      token = ABCD1234
+      environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id", "X-Request-Id"]
+    }
+
 
     api1651 {
       host = 127.0.0.1
