--- a/resources/public/api/conf/1.0/common/pathParameters.yaml
+++ b/resources/public/api/conf/1.0/common/pathParameters.yaml
@@ -14,18 +14,17 @@ components:
       in: path
       description: |
         The tax year the data applies to, for example, 2020-21. The start year and end year must not span two tax years. The minimum tax year is 2020-21. No gaps are allowed, for example, 2020-22 is not valid. (The minimum tax year in Sandbox is 2019-20.)
-      type: string
-      example: "2020-21"
+      schema:
+        type: string
+        example: "2020-21"
       required: true
     benefitId:
       name: benefitId
       in: path
       description: |
         Unique identifier of the benefit type.
-        
-        Must conform to the regular expression
-        
-        `^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$`
       type: string
-      example: "123e4567-e89b-12d3-a456-426614174000"
+      schema:
+        pattern: ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+        example: "123e4567-e89b-12d3-a456-426614174000"
       required: true
