--- a/resources/public/api/conf/1.0/common/errors.yaml
+++ b/resources/public/api/conf/1.0/common/errors.yaml
@@ -109,12 +109,12 @@ components:
 
     clientOrAgentNotAuthorised:
       description: |
-        The client and/or agent is not authorised. This is normally because:
+        The client or agent is not authorised. This is because:
         the client is not subscribed to MTD, the agent is not subscribed to Agent Services,
         or the client has not authorised the agent to act on their behalf.
       value:
         code: CLIENT_OR_AGENT_NOT_AUTHORISED
-        message: The client and/or agent is not authorised
+        message: The client or agent is not authorised
 
     ruleUpdateForbidden:
       description: An update for a HMRC held benefit is not permitted.
