--- a/resources/public/api/conf/1.0/endpoints/benefit_amend.yaml
+++ b/resources/public/api/conf/1.0/endpoints/benefit_amend.yaml
@@ -1,10 +1,8 @@
 summary: Amend State Benefit
 description: |
-  This endpoint enables you to amend a previously created customer benefit, if the customer attempts to update
-  a HMRC held benefit then this operation will fail with a forbidden response code. A National Insurance number,
-  tax year and benefit ID must be provided.
+  This endpoint enables you to amend benefits financial data.
   
-  This endpoint can only be used for a tax year that has ended.
+  A National Insurance number, tax year and benefit ID must be provided.
   
   ### Test data
   <p>Scenario simulations using Gov-Test-Scenario headers is only available in the sandbox environment.</p>
@@ -92,6 +90,8 @@ responses:
             $ref: '../common/errors.yaml#/components/examples/ruleTaxYearRangeInvalid'
           RULE_TAX_YEAR_NOT_SUPPORTED:
             $ref: '../common/errors.yaml#/components/examples/ruleTaxYearNotSupported'
+          RULE_TAX_YEAR_NOT_ENDED:
+            $ref: '../common/errors.yaml#/components/examples/ruleTaxYearNotEnded'
           RULE_END_DATE_BEFORE_START_DATE:
             $ref: '../common/errors.yaml#/components/examples/ruleEndDateBeforeStartDate'
           RULE_START_DATE_AFTER_TAX_YEAR_END:
