--- a/resources/public/api/conf/1.0/endpoints/benefit_create.yaml
+++ b/resources/public/api/conf/1.0/endpoints/benefit_create.yaml
@@ -1,6 +1,7 @@
 summary: Create State Benefit
 description: |
-  This endpoint allows a developer to create any state benefits they believe are missing.
+  This endpoint allows a developer to create any missing state benefits.
+  
   A National Insurance number, tax year, benefit type and start date must be provided.
 
   This endpoint can only be used for a tax year that has ended.
@@ -22,10 +23,6 @@ description: |
           <tr>
              <td><p>BENEFIT_TYPE_EXISTS</p></td>
              <td><p>Simulates the scenario where a benefit of this type already exists.</p></td>
-          </tr>
-          <tr>
-              <td><p>NOT_FOUND</p></td>
-              <td><p>Simulates the scenario where no data is found.</p></td>
           </tr>
       </tbody>
   </table>
@@ -90,6 +87,8 @@ responses:
             $ref: '../common/errors.yaml#/components/examples/ruleTaxYearRangeInvalid'
           RULE_TAX_YEAR_NOT_ENDED:
             $ref: '../common/errors.yaml#/components/examples/ruleTaxYearNotEnded'
+          RULE_TAX_YEAR_NOT_SUPPORTED:
+            $ref: '../common/errors.yaml#/components/examples/ruleTaxYearNotSupported'
           RULE_END_DATE_BEFORE_START_DATE:
             $ref: '../common/errors.yaml#/components/examples/ruleEndDateBeforeStartDate'
           RULE_START_DATE_AFTER_TAX_YEAR_END:
@@ -110,13 +109,3 @@ responses:
         examples:
           CLIENT_OR_AGENT_NOT_AUTHORISED:
             $ref: '../common/errors.yaml#/components/examples/clientOrAgentNotAuthorised'
-
-  "404":
-    description: Not Found
-    content:
-      application/json:
-        schema:
-          $ref: '../schemas/error_response.yaml'
-        examples:
-          MATCHING_RESOURCE_NOT_FOUND:
-            $ref: '../common/errors.yaml#/components/examples/notFound'
