--- a/resources/public/api/conf/1.0/endpoints/benefit_delete.yaml
+++ b/resources/public/api/conf/1.0/endpoints/benefit_delete.yaml
@@ -1,10 +1,9 @@
 summary: Delete State Benefit
 description: |
   This endpoint allows a developer to delete customer submitted state benefits.
-  If the customer attempts to delete a HMRC held state benefit then the operation will fail with a forbidden response.
-  A National Insurance number, tax year and benefit ID must be provided.
+  If the customer attempts to delete a pre-populated state benefit then the operation will fail with a forbidden response.
   
-  This endpoint can only be used for a tax year that has ended.
+  A National Insurance number, tax year and benefit ID must be provided.
 
   ### Test data
   <p>Scenario simulations using Gov-Test-Scenario headers is only available in the sandbox environment.</p>
