[MTDSA-14547] [CK] Fix RAML to OAS migration mismatch errors.

--- a/resources/public/api/conf/1.0/benefit_unignore_endpoints.yaml
+++ b/resources/public/api/conf/1.0/benefit_unignore_endpoints.yaml
@@ -1,5 +1,5 @@
 post:
-  $ref: "./benefit_unignore_endpoints.yaml"
+  $ref: "./benefit_unignore.yaml"
   summary: Unignore State Benefit
   security:
     - User-Restricted:
