--- a/resources/public/api/conf/1.0/benefit_create.yaml
+++ b/resources/public/api/conf/1.0/benefit_create.yaml
@@ -24,6 +24,18 @@ description: |
              <td><p>BENEFIT_TYPE_EXISTS</p></td>
              <td><p>Simulates the scenario where a benefit of this type already exists.</p></td>
           </tr>
+          <tr>
+             <td><p>END_DATE_BEFORE_TAX_YEAR_START</p></td>
+             <td><p>Simulates the scenario where the end date provided is before the start date.</p></td>
+          </tr>
+          <tr>
+             <td><p>START_DATE_AFTER_TAX_YEAR_END</p></td>
+             <td><p>Simulates the scenario where the start date provided is after the tax year ended.</p></td>
+          </tr>
+          <tr>
+             <td><p>TAX_YEAR_NOT_ENDED</p></td>
+             <td><p>Simulates the scenario where the tax year provided has not ended.</p></td>
+          </tr>
       </tbody>
   </table>
 
