MTDSA-16455 OAS Update for RULE_INCORRECT_GOV_TEST_SCENARIO

--- a/resources/public/api/conf/1.0/benefit_delete.yaml
+++ b/resources/public/api/conf/1.0/benefit_delete.yaml
@@ -69,6 +69,8 @@ responses:
             $ref: './common/errors.yaml#/components/examples/ruleTaxYearNotSupported'
           RULE_DELETE_FORBIDDEN:
             $ref: './common/errors.yaml#/components/examples/ruleDeleteForbidden'
+          RULE_INCORRECT_GOV_TEST_SCENARIO:
+            $ref: './common/errors.yaml#/components/examples/ruleIncorrectGovTestScenario'
 
   "403":
     description: Forbidden
