--- a/resources/public/api/conf/1.0/benefit_amend.yaml
+++ b/resources/public/api/conf/1.0/benefit_amend.yaml
@@ -108,6 +108,8 @@ responses:
             $ref: './common/errors.yaml#/components/examples/ruleIncorrectOrEmptyBody'
           RULE_UPDATE_FORBIDDEN:
             $ref: './common/errors.yaml#/components/examples/ruleUpdateForbidden'
+          RULE_INCORRECT_GOV_TEST_SCENARIO:
+            $ref: './common/errors.yaml#/components/examples/ruleIncorrectGovTestScenario'
 
   "403":
     description: Forbidden
