--- a/resources/public/api/conf/1.0/benefit_create.yaml
+++ b/resources/public/api/conf/1.0/benefit_create.yaml
@@ -111,6 +111,8 @@ responses:
             $ref: './common/errors.yaml#/components/examples/ruleIncorrectOrEmptyBody'
           RULE_BENEFIT_TYPE_EXISTS:
             $ref: './common/errors.yaml#/components/examples/ruleBenefitTypeExists'
+          RULE_INCORRECT_GOV_TEST_SCENARIO:
+            $ref: './common/errors.yaml#/components/examples/ruleIncorrectGovTestScenario'
 
   "403":
     description: Forbidden
