--- a/resources/public/api/conf/1.0/benefit_ignore.yaml
+++ b/resources/public/api/conf/1.0/benefit_ignore.yaml
@@ -81,6 +81,8 @@ responses:
             $ref: './common/errors.yaml#/components/examples/ruleTaxYearNotEnded'
           RULE_IGNORE_FORBIDDEN:
             $ref: './common/errors.yaml#/components/examples/ruleIgnoreForbidden'
+          RULE_INCORRECT_GOV_TEST_SCENARIO:
+            $ref: './common/errors.yaml#/components/examples/ruleIncorrectGovTestScenario'
 
   "403":
     description: Forbidden
