--- a/resources/public/api/conf/1.0/common/errors.yaml
+++ b/resources/public/api/conf/1.0/common/errors.yaml
@@ -117,6 +117,15 @@ components:
         code: RULE_DELETE_FORBIDDEN
         message: A deletion of a HMRC held state benefit is not permitted
 
+    ruleIncorrectGovTestScenario:
+      description: | 
+        The request did not match any available sandbox data. 
+        Check that the supplied Gov-Test-Scenario is correct for this endpoint version. 
+        This error will only be returned in the sandbox environment.
+      value:
+        code: RULE_INCORRECT_GOV_TEST_SCENARIO
+        message: The Gov-Test-Scenario was not found
+
     # 403
 
     clientOrAgentNotAuthorised:
