--- a/conf/application.conf
+++ b/conf/application.conf
@@ -93,8 +93,8 @@ play.modules.enabled += "config.DIModule"
 api {
   # The status of the version of the API for the API Platform.
   1.0 {
-    status = "ALPHA"
-    endpoints.enabled = false
+    status = "BETA"
+    endpoints.enabled = true
   }
 
   confidence-level-check {
@@ -141,10 +141,6 @@ feature-switch {
   }
 
   release-6 {
-    enabled = true
-  }
-
-  tys-api {
     enabled = true
   }
 
