--- a/resources/public/api/conf/1.0/benefit_amend.yaml
+++ b/resources/public/api/conf/1.0/benefit_amend.yaml
@@ -5,37 +5,15 @@ description: |
   A National Insurance number, tax year and benefit ID must be provided.
   
   ### Test data
-  <p>Scenario simulations using Gov-Test-Scenario headers is only available in the sandbox environment.</p>
-  <table>
-      <thead>
-          <tr>
-              <th>Header Value (Gov-Test-Scenario)</th>
-              <th>Scenario</th>
-          </tr>
-      </thead>
-      <tbody>
-          <tr>
-              <td><p>N/A - DEFAULT</p></td>
-              <td><p>Simulate success response.</p></td>
-          </tr>
-          <tr>
-              <td><p>HMRC_HELD</p></td>
-              <td><p>Simulates the scenario in which a benefit is HMRC held and therefore cannot be modified or deleted.</p></td>
-          </tr>
-          <tr>
-              <td><p>START_DATE_AFTER_TAX_YEAR_END</p></td>
-              <td><p>Simulates the scenario where the start date provided is after the tax year ended.</p></td>
-          </tr>
-          <tr>
-              <td><p>END_DATE_BEFORE_TAX_YEAR_START</p></td>
-              <td><p>Simulates the scenario where the end date provided is before the start date.</p></td>
-          </tr>
-          <tr>
-              <td><p>NOT_FOUND</p></td>
-              <td><p>Simulates the scenario where no data is found.</p></td>
-          </tr>
-      </tbody>
-  </table>
+  Scenario simulation using Gov-Test-Scenario headers is only available in the sandbox environment.
+  
+  | Header Value (Gov-Test-Scenario)  | Scenario                                                                                            |
+  |-----------------------------------|-----------------------------------------------------------------------------------------------------|
+  | N/A - DEFAULT                     | Simulate success response.                                                                          |
+  | HMRC_HELD                         | Simulates the scenario in which a benefit is HMRC held and therefore cannot be modified or deleted. |
+  | START_DATE_AFTER_TAX_YEAR_END     | Simulates the scenario where the start date provided is after the tax year ended.                   |
+  | END_DATE_BEFORE_TAX_YEAR_START    | Simulates the scenario where the end date provided is before the start date.                        |
+  | NOT_FOUND                         | Simulates the scenario where no data is found.                                                      |
 
 parameters:
   - $ref: './common/pathParameters.yaml#/components/parameters/nino'
