--- a/resources/public/api/conf/1.0/benefit_amounts_amend.yaml
+++ b/resources/public/api/conf/1.0/benefit_amounts_amend.yaml
@@ -3,29 +3,13 @@ description: |
   This endpoint enables you to amend benefits financial data. A National Insurance number, tax year and benefit ID must be provided.
   
   ### Test data
-  <p>Scenario simulations using Gov-Test-Scenario headers is only available in the sandbox environment.</p>
-  <table>
-      <thead>
-          <tr>
-              <th>Header Value (Gov-Test-Scenario)</th>
-              <th>Scenario</th>
-          </tr>
-      </thead>
-      <tbody>
-          <tr>
-              <td><p>N/A - DEFAULT</p></td>
-              <td><p>Simulate success response.</p></td>
-          </tr>
-          <tr>
-              <td><p>NOT_FOUND</p></td>
-              <td><p>Simulates the scenario where no data is found.</p></td>
-          </tr>
-          <tr>
-              <td><p>TAX_YEAR_NOT_ENDED</p></td>
-              <td><p>Simulates the error returned when a benefit that is not employmentSupportAllowance or jobSeekersAllowance is amended in year.</p></td>
-          </tr>
-      </tbody>
-  </table>
+  Scenario simulation using Gov-Test-Scenario headers is only available in the sandbox environment.
+  
+  | Header Value (Gov-Test-Scenario) | Scenario                                                                                                                      |
+  |----------------------------------|-------------------------------------------------------------------------------------------------------------------------------|
+  | N/A - DEFAULT                    | Simulate success response.                                                                                                    |
+  | NOT_FOUND                        | Simulates the scenario where no data is found.                                                                                |
+  | TAX_YEAR_NOT_ENDED               | Simulates the error returned when a benefit that is not employmentSupportAllowance or jobSeekersAllowance is amended in year. |
 
 parameters:
   - $ref: './common/pathParameters.yaml#/components/parameters/nino'
