--- a/resources/public/api/conf/1.0/benefit_create.yaml
+++ b/resources/public/api/conf/1.0/benefit_create.yaml
@@ -7,37 +7,15 @@ description: |
   This endpoint can only be used for a tax year that has ended.
 
   ### Test data
-  <p>Scenario simulations using Gov-Test-Scenario headers is only available in the sandbox environment.</p>
-  <table>
-      <thead>
-          <tr>
-              <th>Header Value (Gov-Test-Scenario)</th>
-              <th>Scenario</th>
-          </tr>
-      </thead>
-      <tbody>
-          <tr>
-              <td><p>N/A - DEFAULT</p></td>
-              <td><p>Simulates a list of all state benefit types.</p></td>
-          </tr>
-          <tr>
-             <td><p>BENEFIT_TYPE_EXISTS</p></td>
-             <td><p>Simulates the scenario where a benefit of this type already exists.</p></td>
-          </tr>
-          <tr>
-             <td><p>END_DATE_BEFORE_TAX_YEAR_START</p></td>
-             <td><p>Simulates the scenario where the end date provided is before the start date.</p></td>
-          </tr>
-          <tr>
-             <td><p>START_DATE_AFTER_TAX_YEAR_END</p></td>
-             <td><p>Simulates the scenario where the start date provided is after the tax year ended.</p></td>
-          </tr>
-          <tr>
-             <td><p>TAX_YEAR_NOT_ENDED</p></td>
-             <td><p>Simulates the scenario where the tax year provided has not ended.</p></td>
-          </tr>
-      </tbody>
-  </table>
+  Scenario simulation using Gov-Test-Scenario headers is only available in the sandbox environment.
+  
+  | Header Value (Gov-Test-Scenario) | Scenario                                                                          |
+  |----------------------------------|-----------------------------------------------------------------------------------|
+  | N/A - DEFAULT                    | Simulates a list of all state benefit types.                                      |
+  | BENEFIT_TYPE_EXISTS              | Simulates the scenario where a benefit of this type already exists.               |
+  | END_DATE_BEFORE_TAX_YEAR_START   | Simulates the scenario where the end date provided is before the start date.      |
+  | START_DATE_AFTER_TAX_YEAR_END    | Simulates the scenario where the start date provided is after the tax year ended. |
+  | TAX_YEAR_NOT_ENDED               | Simulates the scenario where the tax year provided has not ended.                 |
 
 parameters:
   - $ref: './common/pathParameters.yaml#/components/parameters/nino'
