--- a/resources/public/api/conf/1.0/benefit_ignore.yaml
+++ b/resources/public/api/conf/1.0/benefit_ignore.yaml
@@ -4,33 +4,14 @@ description: |
   Customer-added benefits can’t be ignored, only deleted. A National Insurance number, tax year and benefit ID must be provided.
 
   ### Test data
-  <p>Scenario simulations using Gov-Test-Scenario headers is only available in the sandbox environment.</p>
-  <table>
-      <thead>
-          <tr>
-              <th>Header Value (Gov-Test-Scenario)</th>
-              <th>Scenario</th>
-          </tr>
-      </thead>
-      <tbody>
-          <tr>
-              <td><p>N/A - DEFAULT</p></td>
-              <td><p>Simulates success response.</p></td>
-          </tr>
-          <tr>
-              <td><p>IGNORE_FORBIDDEN</p></td>
-              <td><p>Simulates the scenario in which a benefit is customer added and therefore cannot be ignored.</p></td>
-          </tr>
-          <tr>
-              <td><p>NOT_FOUND</p></td>
-              <td><p>Simulates the scenario where no data is found.</p></td>
-          </tr>
-          <tr>
-              <td><p>TAX_YEAR_NOT_ENDED</p></td>
-              <td><p>Simulates the scenario where the tax year provided has not ended.</p></td>
-          </tr>
-      </tbody>
-  </table>
+  Scenario simulation using Gov-Test-Scenario headers is only available in the sandbox environment.
+  
+  | Header Value (Gov-Test-Scenario) | Scenario                                                                                     |
+  |----------------------------------|----------------------------------------------------------------------------------------------|
+  | N/A - DEFAULT                    | Simulates success response.                                                                  |
+  | IGNORE_FORBIDDEN                 | Simulates the scenario in which a benefit is customer added and therefore cannot be ignored. |
+  | NOT_FOUND                        | Simulates the scenario where no data is found.                                               |
+  | TAX_YEAR_NOT_ENDED               | Simulates the scenario where the tax year provided has not ended.                            |
 
 parameters:
   - $ref: './common/pathParameters.yaml#/components/parameters/nino'
