--- a/resources/public/api/conf/1.0/benefits_list.yaml
+++ b/resources/public/api/conf/1.0/benefits_list.yaml
@@ -9,13 +9,13 @@ description: |
   ### Test data
   Scenario simulation using Gov-Test-Scenario headers is only available in the sandbox environment.
   
-  | Header Value (Gov-Test-Scenario)    | Scenario                                                                                                                                  |
-  |-------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------|
-  | N/A - DEFAULT                       | Simulates a list of all state benefit types.                                                                                              |
-  | N/A - DEFAULT<br>using **benefitId** parameter | Simulates a single HMRC held state benefit.                                                                                    |
-  | HMRC_AMENDED_AMOUNTS                | Simulates the response where HMRC held state benefit amounts have been amended.                                                           |
-  | NOT_FOUND                           | Simulates the scenario where no data is found.                                                                                            |
-  | DYNAMIC                             | The following response parameters will be based on the data submitted in the request:<br>SubmittedOn<br>BenefitID<br>startDate<br>endDate.|
+  | Header Value (Gov-Test-Scenario)    | Scenario                                                                        |
+  |-------------------------------------|---------------------------------------------------------------------------------|
+  | N/A - DEFAULT                       | Simulates a list of all state benefit types.                                    |
+  | N/A - DEFAULT<br>using **benefitId** parameter | Simulates a single HMRC held state benefit.                          |
+  | HMRC_AMENDED_AMOUNTS                | Simulates the response where HMRC held state benefit amounts have been amended. |
+  | NOT_FOUND                           | Simulates the scenario where no data is found.                                  |
+  | DYNAMIC                             | The following response parameters will be based on the data submitted in the request: <br> • SubmittedOn <br> • BenefitID <br> • startDate <br> • endDate.|
 
 parameters:
   - $ref: './common/pathParameters.yaml#/components/parameters/nino'
