--- a/resources/public/api/conf/1.0/benefit_ignore.yaml
+++ b/resources/public/api/conf/1.0/benefit_ignore.yaml
@@ -12,6 +12,7 @@ description: |
   | IGNORE_FORBIDDEN                 | Simulates the scenario in which a benefit is customer added and therefore cannot be ignored. |
   | NOT_FOUND                        | Simulates the scenario where no data is found.                                               |
   | TAX_YEAR_NOT_ENDED               | Simulates the scenario where the tax year provided has not ended.                            |
+  | STATEFUL                         | Performs a stateful ignore.                                                                  |
 
 parameters:
   - $ref: './common/pathParameters.yaml#/components/parameters/nino'
