--- a/resources/public/api/conf/1.0/benefit_amend.yaml
+++ b/resources/public/api/conf/1.0/benefit_amend.yaml
@@ -14,6 +14,8 @@ description: |
   | START_DATE_AFTER_TAX_YEAR_END     | Simulates the scenario where the start date provided is after the tax year ended.                   |
   | END_DATE_BEFORE_TAX_YEAR_START    | Simulates the scenario where the end date provided is before the start date.                        |
   | NOT_FOUND                         | Simulates the scenario where no data is found.                                                      |
+  | STATEFUL                          | Performs a stateful update.                                                                         |
+
 
 parameters:
   - $ref: './common/pathParameters.yaml#/components/parameters/nino'
