--- a/resources/public/api/conf/1.0/benefit_create.yaml
+++ b/resources/public/api/conf/1.0/benefit_create.yaml
@@ -16,6 +16,8 @@ description: |
   | END_DATE_BEFORE_TAX_YEAR_START   | Simulates the scenario where the end date provided is before the start date.      |
   | START_DATE_AFTER_TAX_YEAR_END    | Simulates the scenario where the start date provided is after the tax year ended. |
   | TAX_YEAR_NOT_ENDED               | Simulates the scenario where the tax year provided has not ended.                 |
+  | STATEFUL                         | Performs a stateful create.                                                       |
+
 
 parameters:
   - $ref: './common/pathParameters.yaml#/components/parameters/nino'
