--- a/resources/public/api/conf/1.0/benefit_delete.yaml
+++ b/resources/public/api/conf/1.0/benefit_delete.yaml
@@ -13,6 +13,8 @@ description: |
   | N/A - DEFAULT                    | Simulates success response.                                                                |
   | HMRC_HELD                        | Simulates the scenario in which a deletion of an HMRC held state benefit is not permitted. |
   | NOT_FOUND                        | Simulates the scenario where no data is found.                                             |
+  | STATEFUL                         | Performs a stateful delete.                                                                |
+
 
 parameters:
   - $ref: './common/pathParameters.yaml#/components/parameters/nino'
