--- a/resources/public/api/conf/1.0/benefits_list.yaml
+++ b/resources/public/api/conf/1.0/benefits_list.yaml
@@ -16,7 +16,7 @@ description: |
   | HMRC_AMENDED_AMOUNTS                | Simulates the response where HMRC held state benefit amounts have been amended. |
   | NOT_FOUND                           | Simulates the scenario where no data is found.                                  |
   | DYNAMIC                             | The following response parameters will be based on the data submitted in the request:<br> • SubmittedOn<br> • BenefitID<br> • startDate<br> • endDate |
-
+  | STATEFUL                            | Performs a stateful list.                                                       |
 parameters:
   - $ref: './common/pathParameters.yaml#/components/parameters/nino'
   - $ref: './common/pathParameters.yaml#/components/parameters/taxYear'
