--- a/resources/public/api/conf/1.0/benefit_amounts_delete.yaml
+++ b/resources/public/api/conf/1.0/benefit_amounts_delete.yaml
@@ -16,6 +16,7 @@ description: |
   |----------------------------------|------------------------------------------------|
   | N/A - DEFAULT                    | Simulates success response.                    |
   | NOT_FOUND                        | Simulates the scenario where no data is found. |
+  | STATEFUL                         | Performs a stateful delete.                    |
 
 parameters:
   - $ref: './common/pathParameters.yaml#/components/parameters/nino'
