MTDSA-25857: Adding EMA.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -89,6 +89,17 @@ api {
     auth-validation.enabled = true
   }
 
+  supporting-agent-endpoints {
+    amend-benefit = false
+    amend-benefit-amounts = false
+    create-benefit = false
+    delete-benefit = false
+    delete-benefit-amounts = false
+    ignore-benefit = false
+    list-benefits = false
+    unignore-benefit = false
+  }
+
   # The context which the API will have via the API Platform http://API_GATEWAY/{api.gateway.context}/
   gateway.context = "individuals/state-benefits"
 }
@@ -101,6 +112,15 @@ internalServiceHostPatterns = [ "localhost" ]
 metrics {
   enabled = true
 }
+
+feature-switch {
+
+  supporting-agents-access-control {
+    enabled = true
+    released-in-production = false
+  }
+}
+
 
 # Microservice specific config
 
