--- a/resources/public/api/conf/2.0/benefit_amend.yaml
+++ b/resources/public/api/conf/2.0/benefit_amend.yaml
@@ -42,20 +42,12 @@ requestBody:
             $ref: './examples/amendBenefit/request.json'
 
 responses:
-  "200":
-    description: Success
+  "204":
+    description: Success (No Content)
     headers:
       X-CorrelationId:
         $ref: './common/headers.yaml#/components/parameters/correlationId'
-    content:
-      application/json:
-        schema:
-          $ref: './schemas/amend_benefit_response.json'
-        examples:
-          example-response:
-            description: Example Response
-            value:
-              $ref: './examples/amendBenefit/response.json'
+    content: {}
 
   "400":
     description: Bad request
