--- a/resources/public/api/conf/2.0/benefit_amounts_amend.yaml
+++ b/resources/public/api/conf/2.0/benefit_amounts_amend.yaml
@@ -37,20 +37,12 @@ requestBody:
             $ref: './examples/amendBenefitAmounts/request.json'
 
 responses:
-  "200":
-    description: Success
+  "204":
+    description: Success (No Content)
     headers:
       X-CorrelationId:
         $ref: './common/headers.yaml#/components/parameters/correlationId'
-    content:
-      application/json:
-        schema:
-          $ref: './schemas/amend_benefitAmounts_response.json'
-        examples:
-          example-response:
-            description: Example Response
-            value:
-              $ref: './examples/amendBenefitAmounts/response.json'
+    content: {}
   "400":
     description: Bad request
     content:
