MTDSA-28310 fixed typo in OAS

--- a/resources/public/api/conf/2.0/common/errors.yaml
+++ b/resources/public/api/conf/2.0/common/errors.yaml
@@ -128,7 +128,7 @@ components:
 
     ruleOutsideAmendmentWindow:
       description: |
-        You are outside the amendment window
+        The request cannot be completed as you are outside the amendment window.
       value:
         code: RULE_OUTSIDE_AMENDMENT_WINDOW
         message: You are outside the amendment window
