--- a/resources/public/api/conf/1.0/benefit_amounts_amend.yaml
+++ b/resources/public/api/conf/1.0/benefit_amounts_amend.yaml
@@ -53,6 +53,9 @@ responses:
               $ref: './examples/amendBenefitAmounts/response.json'
   "400":
     description: Bad request
+    headers:
+      X-CorrelationId:
+        $ref: './common/headers.yaml#/components/parameters/correlationId'
     content:
       application/json:
         schema:
@@ -79,6 +82,9 @@ responses:
 
   "403":
     description: Forbidden
+    headers:
+      X-CorrelationId:
+        $ref: './common/headers.yaml#/components/parameters/correlationId'
     content:
       application/json:
         schema:
@@ -89,6 +95,9 @@ responses:
 
   "404":
     description: Not Found
+    headers:
+      X-CorrelationId:
+        $ref: './common/headers.yaml#/components/parameters/correlationId'
     content:
       application/json:
         schema:
