--- a/resources/public/api/conf/1.0/benefit_ignore.yaml
+++ b/resources/public/api/conf/1.0/benefit_ignore.yaml
@@ -43,6 +43,9 @@ responses:
 
   "400":
     description: Bad request
+    headers:
+      X-CorrelationId:
+        $ref: './common/headers.yaml#/components/parameters/correlationId'
     content:
       application/json:
         schema:
@@ -67,6 +70,9 @@ responses:
 
   "403":
     description: Forbidden
+    headers:
+      X-CorrelationId:
+        $ref: './common/headers.yaml#/components/parameters/correlationId'
     content:
       application/json:
         schema:
@@ -76,6 +82,9 @@ responses:
             $ref: './common/errors.yaml#/components/examples/clientOrAgentNotAuthorised'
   "404":
     description: Not Found
+    headers:
+      X-CorrelationId:
+        $ref: './common/headers.yaml#/components/parameters/correlationId'
     content:
       application/json:
         schema:
