--- a/resources/public/api/conf/2.0/benefit_create.yaml
+++ b/resources/public/api/conf/2.0/benefit_create.yaml
@@ -62,6 +62,9 @@ responses:
 
   "400":
     description: Bad request
+    headers:
+      X-CorrelationId:
+        $ref: './common/headers.yaml#/components/parameters/correlationId'
     content:
       application/json:
         schema:
@@ -100,6 +103,9 @@ responses:
 
   "403":
     description: Forbidden
+    headers:
+      X-CorrelationId:
+        $ref: './common/headers.yaml#/components/parameters/correlationId'
     content:
       application/json:
         schema:
