--- a/resources/public/api/conf/2.0/benefit_ignore.yaml
+++ b/resources/public/api/conf/2.0/benefit_ignore.yaml
@@ -36,6 +36,9 @@ responses:
 
   "400":
     description: Bad request
+    headers:
+      X-CorrelationId:
+        $ref: './common/headers.yaml#/components/parameters/correlationId'
     content:
       application/json:
         schema:
@@ -62,6 +65,9 @@ responses:
 
   "403":
     description: Forbidden
+    headers:
+      X-CorrelationId:
+        $ref: './common/headers.yaml#/components/parameters/correlationId'
     content:
       application/json:
         schema:
@@ -71,6 +77,9 @@ responses:
             $ref: './common/errors.yaml#/components/examples/clientOrAgentNotAuthorised'
   "404":
     description: Not Found
+    headers:
+      X-CorrelationId:
+        $ref: './common/headers.yaml#/components/parameters/correlationId'
     content:
       application/json:
         schema:
