--- a/conf/application.conf
+++ b/conf/application.conf
@@ -79,7 +79,8 @@ play.modules.enabled += "config.StateBenefitsPlayModule"
 api {
   # The status of the version of the API for the API Platform.
   1.0 {
-    status = "BETA"
+    status = "DEPRECATED"
+    deprecatedOn = "2025-06-19"
     endpoints {
       enabled = true
       api-released-in-production = true
@@ -114,6 +115,7 @@ api {
 
   # The context which the API will have via the API Platform http://API_GATEWAY/{api.gateway.context}/
   gateway.context = "individuals/state-benefits"
+  documentation-url = "https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api"
 }
 
 bootstrap.http.headersAllowlist = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id"]
