--- a/conf/application.conf
+++ b/conf/application.conf
@@ -133,6 +133,8 @@ feature-switch {
     enabled = true
     released-in-production = false
   }
+
+  ifs_hip_migration_1944.enabled = true
 }
 
 
@@ -162,5 +164,14 @@ microservice {
       token = ABCD1234
       environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id", "X-Request-Id"]
     }
+
+    hip {
+       host = 127.0.0.1
+       port = 9772
+       env = Prod
+       clientId = "someClientId"
+       clientSecret = "someClientSecret"
+       environmentHeaders = ["Accept", "Gov-Test-Scenario", "Location", "X-Request-Timestamp", "X-Session-Id", "X-Request-Id"]
+     }
   }
 }
