[MTDSA-32196]: Config changes to add feature switch

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -134,8 +134,11 @@ feature-switch {
     released-in-production = false
   }
 
-  ifs_hip_migration_1944.enabled = true
-  ifs_hip_migration_1945.enabled = true
+  ifs_hip_migration_1944.enabled     = true
+  ifs_hip_migration_1945.enabled     = true
+  ifs_hip_migration_1937.enabled     = true
+  #OAS docs
+  api_1937_r19_tax_deduction.enabled = true
 }
 
 
