--- a/resources/public/api/conf/2.0/benefit_amounts_amend.yaml
+++ b/resources/public/api/conf/2.0/benefit_amounts_amend.yaml
@@ -101,6 +101,7 @@ responses:
           MATCHING_RESOURCE_NOT_FOUND:
             $ref: './common/errors.yaml#/components/examples/notFound'
 
+# {{#if (enabled 'api_1937_r19_tax_deduction')}}
   "422":
     description: Unprocessible Entity
     headers:
@@ -113,3 +114,4 @@ responses:
         examples:
           RULE_TAX_DEDUCTION_NOT_ALLOWED:
             $ref: './common/errors.yaml#/components/examples/ruleTaxDeductionNotAllowed'
+# {{/if}}
